--- a/My_proj/flex_page.html
+++ b/My_proj/flex_page.html
@@ -1,1 +1,66 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Styles/flex_page_css.css">
+    <link rel="stylesheet" href="print.css" media="print">
+    <title>Мои работы</title>
+</head>
+<body>
+    <header>
+        <h1>Мои работы</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Главная</a></li>
+                <li><a href="#works">Мои работы</a></li>
+                <li><a href="#contacts">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>Мои работы</h2>
+
+        <div class="goods-container">
+            <div class="goods">
+                <div class="goods-img">
+                    <img src="C:\network_folder\Univercity\2_course\Veb\My_proj\img\Game.jpg">
+                </div>
+                <div class="goods-desc">
+                    <p>Игра</p>
+                </div>                
+            </div>
+            <div class="goods">
+                <div class="goods-img">
+                    <img src="C:\network_folder\Univercity\2_course\Veb\My_proj\img\App_fit.png">
+                </div>
+                <div class="goods-desc">
+                    <p>Приложение для похудения</p>
+                </div>
+            </div>
+            <div class="goods">
+                <div class="goods-img">
+                    <img src="C:\network_folder\Univercity\2_course\Veb\My_proj\img\App_fin.jpg">
+                </div>
+                <div class="goods-desc">
+                    <p>Приложение для финансов</p>
+                </div>
+            </div>
+            <div class="goods">
+                <div class="goods-img">
+                    <img src="C:\network_folder\Univercity\2_course\Veb\My_proj\img\Web.jpg">
+                </div>
+                <div class="goods-desc">
+                    <p>Веб-сайт</p>
+                </div>
+            </div>
+        </div>
+        
+    </main>
+    <footer>
+        <div class="container">
+            &copy; Иванов И. И.
+        </div>
+    </footer>
+</body>
+</html>
