--- a/My_proj/flex_page.html
+++ b/My_proj/flex_page.html
@@ -24,7 +24,7 @@
         <div class="goods-container">
             <div class="goods">
                 <div class="goods-img">
-                    <img src="C:\network_folder\Univercity\2_course\Veb\My_proj\img\Game.jpg">
+                    <img src="img/Game.jpg">
                 </div>
                 <div class="goods-desc">
                     <p>Игра</p>
@@ -32,7 +32,7 @@
             </div>
             <div class="goods">
                 <div class="goods-img">
-                    <img src="C:\network_folder\Univercity\2_course\Veb\My_proj\img\App_fit.png">
+                    <img src="img/App_fit.png">
                 </div>
                 <div class="goods-desc">
                     <p>Приложение для похудения</p>
@@ -40,7 +40,7 @@
             </div>
             <div class="goods">
                 <div class="goods-img">
-                    <img src="C:\network_folder\Univercity\2_course\Veb\My_proj\img\App_fin.jpg">
+                    <img src="img/App_fin.jpg">
                 </div>
                 <div class="goods-desc">
                     <p>Приложение для финансов</p>
@@ -48,7 +48,7 @@
             </div>
             <div class="goods">
                 <div class="goods-img">
-                    <img src="C:\network_folder\Univercity\2_course\Veb\My_proj\img\Web.jpg">
+                    <img src="img/Web.jpg">
                 </div>
                 <div class="goods-desc">
                     <p>Веб-сайт</p>
